K8s/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-service
spec:
  type: ClusterIP
  selector:
    app: enterprise-app
  ports:
    - port: 80
      targetPort: 5000
